[package]
name = "gin"
version = "0.1.0"
authors = [ "Peter Cummuskey <peterc@aetheric.co.nz>" ]
description = "A git client that focuses on corporate development workflows."
homepage = "http://aetheric.github.io/gin"
repository = "https://github.com/aetheric/gin"
keywords = [ "cli", "git" ]
license = "MIT"
build = "build.rs"

[dependencies]
clap = { version = "2", features = [ "unstable" ] }
log = "*"
log4rs = "0.5.0"
git2 = "0.5"

[dev-dependencies]
stainless = "*"

[package.metadata.release]
sign-commit = true
upload-doc = true
