name:          gin
version:       0.1.0.0
synopsis:      A version control veneer on top of git.
description:
  A git client that uses the best of libgit2 to make for a more agreeable
  corporate development workflow. Any functions not supported by the client
  just fall-back to git functionality, though this can be disabled in the
  config.
homepage:      https://github.com/tzrlk/gin#readme
bug-reports:   https://github.com/tzrlk/gin/issues
license:       MIT
author:        Peter Cummuskey
maintainer:    peterc@aetheric.co.nz
category:      Tools
stability:     Alpha
build-type:    Simple
cabal-version: >= 1.10

extra-source-files:
  README.md
  stack.yaml

library
  hs-source-dirs:   src
  exposed-modules:  Lib
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    configurator,
    gitlib,
    gitlib-libgit2,
    system-filepath,
    text

executable gin-exe
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    ansi-terminal,
    base,
    gin,
    optparse-applicative

test-suite gin-test
  hs-source-dirs:   test
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    base,
    gin

source-repository head
  type:     git
  location: https://github.com/tzrlk/gin
